--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -15,9 +15,13 @@ jobs:
   visual-tests:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
     - uses: actions/checkout@v4
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
         fetch-depth: 0
     
     - name: Setup Bun
@@ -36,13 +40,31 @@ jobs:
     
     - name: Run Visual Regression Tests
       run: |
-        if [ "${{ github.event.inputs.update_baseline }}" = "true" ]; then
+        # Check if baseline screenshots exist
+        if [ ! -d "e2e/visual/visual-regression.spec.ts-snapshots" ] || [ -z "$(ls -A e2e/visual/visual-regression.spec.ts-snapshots)" ]; then
+          echo "No baseline screenshots found. Creating initial baselines..."
+          bun playwright test e2e/visual/ --project=chromium --update-snapshots
+        elif [ "${{ github.event.inputs.update_baseline }}" = "true" ]; then
+          echo "Updating baseline screenshots..."
           bun playwright test e2e/visual/ --project=chromium --update-snapshots
         else
+          echo "Running visual regression tests..."
           bun playwright test e2e/visual/ --project=chromium
         fi
       env:
         CI: true
+    
+    - name: Commit baseline screenshots if created
+      if: github.event_name == 'pull_request'
+      run: |
+        # Check if new screenshots were created
+        if git diff --name-only | grep -q "e2e/visual/.*\.png$"; then
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add e2e/visual/**/*.png
+          git commit -m "chore: add VRT baseline screenshots for Linux CI environment"
+          git push origin HEAD:${{ github.head_ref }}
+        fi
     
     - name: Upload VRT Results
       uses: actions/upload-artifact@v4
