--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,13 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["node_modules/**", ".next/**", "out/**", "dist/**"]
+    "ignore": [
+      "node_modules/**",
+      ".devcontainer",
+      ".next/**",
+      "out/**",
+      "dist/**"
+    ]
   },
   "formatter": {
     "enabled": true,
